// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggler Component with snapshot should render classnames include (w-7 h-4) and (opacity-25) when passing disabled={true} and size=sm  1`] = `
<button
  className="rounded-full flex items-center cursor-pointer transition duration-100 ease-out border border-transparent focus:outline-none w-7 h-4  bg-grey-shd4 hover:bg-grey-shd3  focus:border-grey-shd3 cursor-not-allowed opacity-25"
  data-testid="test"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="rounded-full transition-all duration-100 ease-in-out bg-white w-2.5 h-2.5 m-2xxs"
  />
</button>
`;

exports[`Toggler Component with snapshot should render classnames include (w-7 h-4) and do NOT include (opacity-25) when passing disabled={false} and size=sm  1`] = `
<button
  className="rounded-full flex items-center cursor-pointer transition duration-100 ease-out border border-transparent focus:outline-none w-7 h-4  bg-grey-shd4 hover:bg-grey-shd3  focus:border-grey-shd3"
  data-testid="test"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="rounded-full transition-all duration-100 ease-in-out bg-white w-2.5 h-2.5 m-2xxs"
  />
</button>
`;

exports[`Toggler Component with snapshot should render include (w-sm h-6) and classnames do NOT include (opacity-25) when passing disabled={false} and size=default  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="rounded-full flex items-center cursor-pointer transition duration-100 ease-out border border-transparent focus:outline-none w-sm h-6  bg-grey-shd4 hover:bg-grey-shd3  focus:ring-2 focus:ring-grey-shd3"
        data-testid="test"
      >
        <div
          class="rounded-full transition-all duration-100 ease-in-out bg-white w-4 h-4 m-1 "
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="rounded-full flex items-center cursor-pointer transition duration-100 ease-out border border-transparent focus:outline-none w-sm h-6  bg-grey-shd4 hover:bg-grey-shd3  focus:ring-2 focus:ring-grey-shd3"
      data-testid="test"
    >
      <div
        class="rounded-full transition-all duration-100 ease-in-out bg-white w-4 h-4 m-1 "
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toggler Component with snapshot should render include (w-sm h-6) and classnames include (opacity-25) when passing disabled={true} and size=default  1`] = `
<button
  className="rounded-full flex items-center cursor-pointer transition duration-100 ease-out border border-transparent focus:outline-none w-sm h-6  bg-grey-shd4 hover:bg-grey-shd3  focus:ring-2 focus:ring-grey-shd3 cursor-not-allowed opacity-25"
  data-testid="test"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="rounded-full transition-all duration-100 ease-in-out bg-white w-4 h-4 m-1 "
  />
</button>
`;
